--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,23 @@
   margin: 0;
   padding: 0;
 }
+
+body{
+  background-color: lightgray;
+  padding-bottom: 620px;
+}
+
+img { 
+  max-width: 50px;
+}
+
+h3 {
+  font-size: x-large;
+  font-weight: bold;
+}
+
+.title {
+  background-image: linear-gradient(to right, #dcd6f7, #947be4, #564787, #362d55);
+  padding: 30px;
+  margin: 0;
+}
